# fiscalyear

./: .readthedocs.yaml  .travis.yml  LICENSE  README.md  README.rst  fiscalyear.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_fiscalyear.py
.github/workflows/: black.yaml  flake8.yaml  pytest.yaml  style.yaml  tests.yaml
docs/: Makefile  advanced_usage.rst  basic_usage.rst  conf.py  coverage.rst  documentation.rst  fiscalyear.rst  index.rst  installation.rst  requirements.txt  testing.rst
fiscalyear/: __init__.py
