# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
[metadata]
name = fiscalyear
version = attr: fiscalyear.__version__
url = https://github.com/adamjstewart/fiscalyear
author = Adam J. Stewart
author_email = ajstewart426@gmail.com
classifiers =
    # Project maturity
    Development Status :: 3 - Alpha
    # Intended audience
    Intended Audience :: Financial and Insurance Industry
    # License type
    License :: OSI Approved :: MIT License
    # Supported Python versions
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    # Type of package
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Office/Business :: Scheduling
license = MIT
license_files = LICENSE
description = Utilities for managing the fiscal calendar
long_description = file: README.rst
keywords = fiscal year, fiscal quarter, calendar, datetime

[options]
python_requires = >=3.6
py_modules = fiscalyear

[flake8]
max-line-length = 88
