# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
[metadata]
name = fiscalyear
version = attr: fiscalyear.__version__
url = https://github.com/adamjstewart/fiscalyear
author = Adam J. Stewart
author_email = ajstewart426@gmail.com
classifiers =
    # Project maturity
    Development Status :: 3 - Alpha
    # Intended audience
    Intended Audience :: Financial and Insurance Industry
    # License type
    License :: OSI Approved :: MIT License
    # Supported Python versions
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    # Type of package
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Office/Business :: Scheduling
license = MIT
license_files = LICENSE
description = Utilities for managing the fiscal calendar
long_description = file: README.rst
keywords = fiscal year, fiscal quarter, calendar, datetime

[options]
python_requires = >=3.9
packages = fiscalyear

[options.package_data]
fiscalyear = py.typed

[flake8]
max-line-length = 88
